# StartupInfo

./: .gitignore  README.md
.github/workflows/: backend-ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_company_urls.py  0003_company_enrichment.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: applications.py  auth.py  companies.py  investments.py  investors.py  jobs.py
backend/app/models/: __init__.py  audit_log.py  company.py  investment.py  investor.py  job.py  job_application.py  user.py
backend/app/schemas/: auth.py  company.py  investment.py  investor.py  job.py  job_application.py
backend/app/services/: auth.py  company.py  investor.py
backend/app/services/discovery/: company.py  extractor.py  jobs.py  serp.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_companies.py  test_investments.py
docs/: Raj Notes.md  StartupInfo.spec.v.0.md  StartupInfo_Implementation_Plan.docx  architecture.md
infra/: .env.example  docker-compose.yml
